==> jackkc7vlo/MCUs/TM4C123G/hal/i2c_hal.c <==
#include <clock_hal.h>
#include <gpio_hal.h>
#include <hw_config.h>
#include <i2c_hal.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h> /*lint -e129*/
#include <tm4c123gh6pm.h>
#define NUM_I2C_MODULES 4U /**< TM4C123G supports I2C0 – I2C3 */

p_i2c_hal_t i2c_hal_create_device(const uint32_t i2c_board_id, const uint32_t sda_port, const uint32_t sda_pin,
                                  const uint32_t scl_port, const uint32_t scl_pin, const p_i2c_callback_t p_callback)
{
    if (i2c_board_id >= NUM_I2C_DEVICES)
    {
        return NULL; // Invalid device ID
    }

    i2c_hal_t *p_device = &i2c_hal_devices[i2c_board_id];

    if (p_device->in_use_count)
    {
        return p_device; // Device already in use
    }

    if (i2c_board_id >= NUM_I2C_MODULES)
    {
        return NULL; // I2C module index out of range for this MCU
    }

    p_device->in_use_count++;
    p_device->i2c_module_id              = i2c_board_id;
    p_device->regs                       = i2c_base[i2c_board_id];
    p_device->enabled                    = false;
    p_device->callback.callback          = p_callback;
    p_device->callback.p_callback_handle = NULL; // Set as needed
    p_device->callback.callback_context  = NULL; // Set as needed

    /* Create GPIO handles for SCL and SDA (resource allocation only) */
    p_device->p_scl_gpio = gpio_hal_create(scl_port);
    p_device->p_sda_gpio = gpio_hal_create(sda_port);
    if (p_device->p_scl_gpio == NULL || p_device->p_sda_gpio == NULL)
    {
        p_device->in_use_count--;
        return NULL;
    }

    /* Store pin numbers for enable/disable/cleanup */
    p_device->scl_pin = (uint8_t)scl_pin;
    p_device->sda_pin = (uint8_t)sda_pin;

    return p_device;
}

uint32_t i2c_hal_write(const p_i2c_hal_t p_handle, const uint32_t slave_address, const uint32_t cmd_or_register,
                       const uint32_t cmd_or_register_len, const uint8_t *const data, const uint_fast16_t data_len)
{
    int                error;
    uint_fast16_t      bytes_written  = 0;
    uint_fast16_t      bytes_to_write = data_len;
    uint8_t           *pdata          = (uint8_t *)data;
    i2c_master_regs_t *regs           = p_handle->regs;

    if (bytes_to_write == 0)
        return (uint32_t)-1; /* no write was performed */
    /* send slave address and starting address */
    regs->MSA = slave_address << 1;
    regs->MDR = cmd_or_register;
    regs->MCS = 3; /* S-(saddr+w)-ACK-maddr-ACK */

    error = I2C_wait_till_done(regs); /* wait until write is complete */
    if (error)
    {
        regs->MCS = 4; /* send STOP to release the bus */
        while (regs->MCS & 0x40U)
        {
        } /* wait for BUSBSY to clear */
        return (uint32_t)error;
    }

    /* send data one byte at a time */
    while (bytes_to_write > 1)
    {
        regs->MDR = *pdata++; /* write the next byte */
        regs->MCS = 1;        /* -data-ACK- */
        error     = I2C_wait_till_done(regs);
        if (error)
        {
            regs->MCS = 4; /* send STOP to release the bus */
            while (regs->MCS & 0x40U)
            {
            } /* wait for BUSBSY to clear */
            return (uint32_t)error;
        }
        bytes_to_write--;
        bytes_written++;
    }

    /* send last byte and a STOP */
    regs->MDR = *pdata++; /* write the last byte */
    regs->MCS = 5;        /* -data-ACK-P */
    error     = I2C_wait_till_done(regs);
    while (regs->MCS & 0x40)
        ; /* wait until bus is not busy */
    if (error)
        return error;
    return 0; /* no error */
}

uint32_t i2c_hal_read(const p_i2c_hal_t p_handle, const uint32_t slave_address, const uint32_t cmd_or_register,
                      const uint32_t cmd_or_register_len, uint8_t *const data, const uint_fast16_t data_len)
{
    int                error;
    uint_fast16_t      bytes_to_read = data_len;
    uint8_t           *pdata         = data;
    i2c_master_regs_t *regs          = p_handle->regs;

    if (data_len == 0)
        return (uint32_t)-1; /* no read was performed */

    /* send slave address and starting address */
    regs->MSA = slave_address << 1;
    regs->MDR = cmd_or_register;
    regs->MCS = 3; /* S-(saddr+w)-ACK-maddr-ACK */
    error     = I2C_wait_till_done(regs);
    if (error)
    {
        regs->MCS = 4; /* send STOP to release the bus */
        while (regs->MCS & 0x40U)
        {
        } /* wait for BUSBSY to clear */
        return (uint32_t)error;
    }

    /* to change bus from write to read, send restart with slave addr */
    regs->MSA = (slave_address << 1) + 1; /* restart: -R-(saddr+r)-ACK */

    if (bytes_to_read == 1) /* if last byte, don't ack */
        regs->MCS = 7;      /* -data-NACK-P */
    else                    /* else ack */
        regs->MCS = 0xB;    /* -data-ACK- */
    error = I2C_wait_till_done(regs);
    if (error)
    {
        regs->MCS = 4; /* send STOP to release the bus */
        while (regs->MCS & 0x40U)
        {
        } /* wait for BUSBSY to clear */
        return (uint32_t)error;
    }

    *pdata++ = regs->MDR; /* store the data received */

    if (--bytes_to_read == 0) /* if single byte read, done */
    {
        while (regs->MCS & 0x40)
            ;     /* wait until bus is not busy */
        return 0; /* no error */
    }

    /* read the rest of the bytes */
    while (bytes_to_read > 1)
    {
        regs->MCS = 9; /* -data-ACK- */
        error     = I2C_wait_till_done(regs);
        if (error)
        {
            regs->MCS = 4; /* send STOP to release the bus */
            while (regs->MCS & 0x40U)
            {
            } /* wait for BUSBSY to clear */
            return (uint32_t)error;
        }
        bytes_to_read--;
        *pdata++ = regs->MDR; /* store data received */
    }

    regs->MCS = 5; /* -data-NACK-P */
    error     = I2C_wait_till_done(regs);
    *pdata    = regs->MDR; /* store data received */
    while (regs->MCS & 0x40)
        ; /* wait until bus is not busy */

    return 0; /* no error */
}

void i2c_hal_enable(const p_i2c_hal_t p_handle, const bool turn_on, const uint32_t settle_time_ms)
{
    if (p_handle == NULL || p_handle->in_use_count == 0u)
    {
        return;
    }

    if (turn_on && !p_handle->enabled)
    {
        i2c_master_regs_t *regs    = p_handle->regs;
        uint32_t           clk_bit = (1U << p_handle->i2c_module_id);

        /* Enable GPIO port clocks */
        gpio_hal_init(p_handle->p_scl_gpio);
        gpio_hal_init(p_handle->p_sda_gpio);

        /* Enable I2C peripheral clock and wait for ready */
        SYSCTL_RCGCI2C_R |= clk_bit;
        while (!(SYSCTL_PRI2C_R & clk_bit))
        {
        }

        /* Configure SCL pin: alternate function 3 (I2C) */
        gpio_hal_pin_direction(p_handle->p_scl_gpio, p_handle->scl_pin, PIN_DIRECTION_ALT);
        gpio_hal_set_alt_function(p_handle->p_scl_gpio, p_handle->scl_pin, 3U);

        /* Configure SDA pin: alternate function 3 (I2C), open drain */
        gpio_hal_pin_direction(p_handle->p_sda_gpio, p_handle->sda_pin, PIN_DIRECTION_ALT);
        gpio_hal_set_alt_function(p_handle->p_sda_gpio, p_handle->sda_pin, 3U);
        gpio_hal_pin_mode(p_handle->p_sda_gpio, p_handle->sda_pin, OPENDRAIN);

        /* Enable I2C master and configure clock for 100 kHz */
        regs->MCR = 0x0010;
        /* (1 + TIME_PERIOD) = SYS_CLK / (2 * (SCL_LP + SCL_HP) * I2C_CLK_Freq)
           TIME_PERIOD = 16,000,000 / (2(6+4) * 100000) - 1 = 7 */
        regs->MTPR = 0x07;

        p_handle->enabled = true;

        /* Allow bus devices time to stabilize after power-on */
        if (settle_time_ms > 0u)
        {
            clock_hal_delay(settle_time_ms);
        }
    }
    else if (!turn_on && p_handle->enabled)
    {
        i2c_master_regs_t *regs    = p_handle->regs;
        uint32_t           clk_bit = (1U << p_handle->i2c_module_id);

        /* Disable I2C master */
        regs->MCR = 0x0000;

        /* Reset SCL pin back to default (input, floating) */
        if (p_handle->p_scl_gpio != NULL)
        {
            gpio_hal_set_alt_function(p_handle->p_scl_gpio, p_handle->scl_pin, 0U);
            gpio_hal_pin_direction(p_handle->p_scl_gpio, p_handle->scl_pin, PIN_DIRECTION_INPUT);
            gpio_hal_pin_mode(p_handle->p_scl_gpio, p_handle->scl_pin, FLOAT);
        }

        /* Reset SDA pin back to default (input, floating) */
        if (p_handle->p_sda_gpio != NULL)
        {
            gpio_hal_set_alt_function(p_handle->p_sda_gpio, p_handle->sda_pin, 0U);
            gpio_hal_pin_direction(p_handle->p_sda_gpio, p_handle->sda_pin, PIN_DIRECTION_INPUT);
            gpio_hal_pin_mode(p_handle->p_sda_gpio, p_handle->sda_pin, FLOAT);
        }

        /* Disable I2C peripheral clock */
        SYSCTL_RCGCI2C_R &= ~clk_bit;

        p_handle->enabled = false;
    }
}
